Fixed problem with long words. Breaking them if they are too long

--- a/BlogSystem/BlogSystem.Web/Content/site.blog.css
+++ b/BlogSystem/BlogSystem.Web/Content/site.blog.css
@@ -35,3 +35,14 @@
 .blog-panel-heading {
     cursor: pointer;
 }
+
+.blog-table-word-wrap {
+    word-wrap: break-word;
+    table-layout:fixed;
+}
+
+.blog-word-wrap {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    width: 100%;
+}
